Moved fields from the projects to the projects-list file.
This is because those fields need to be loaded when the projects are added to the HTML and not before. Therefore they belong in the projects-list file.

--- a/language/projects-list.json
+++ b/language/projects-list.json
@@ -1,4 +1,16 @@
 {
+	"fields": [
+		{
+			"name": "lang_projectsMenuYear",
+			"nl": "Jaar:",
+			"en": "Year:"
+		},
+		{
+			"name": "lang_projectsMenuType",
+			"nl": "Soort:",
+			"en": "Type:"
+		}	
+	],
 	"projects": [
 		{
 			"projectId": "1fr2vl",
