renamed the project type in the JSON to project category

--- a/language/projectsList.json
+++ b/language/projectsList.json
@@ -50,7 +50,7 @@
 				"en": "arthurvanstrien.nl"
 			},
 			"year": "2019",
-			"type": 
+			"category": 
 			{
 				"nl": "Website",
 				"en": "Website"
