--- a/language/projectsList.json
+++ b/language/projectsList.json
@@ -60,8 +60,8 @@
 				"nl": "Website",
 				"en": "Website"
 			},
-			"programming-languages": "Javascript, JQuery, HTML, CSS",
-			"used-tools": "Notepad++, Adobe Lightroom",
+			"programmingLanguages": "Javascript, JQuery, HTML, CSS",
+			"usedTools": "Notepad++, Adobe Lightroom",
 			"motive": 
 			{
 				"nl": "Project gebouwd uit eigen beweging",
