Corrected a name that was purposely changed to check if code worked.

--- a/language/projectsList.json
+++ b/language/projectsList.json
@@ -8,7 +8,7 @@
 		{
 			"name": "lang_projectsMenu-year",
 			"nl": "Jaar:",
-			"en": "Year1999:"
+			"en": "Year:"
 		},
 		{
 			"name": "lang_projectsMenu-category",
