Refactored pageTitle to Title for using titles from projects etc.

--- a/language/gallery.json
+++ b/language/gallery.json
@@ -3,7 +3,7 @@
 		"nl": "Afbeeldingen Galerij",
 		"en": "Gallery"
 	},
-	"pageTitle": {
+	"title": {
 		"nl": "Afbeeldingen Galerij",
 		"en": "Gallery"
 	},
