Corrected project text.

--- a/language/projectsList.json
+++ b/language/projectsList.json
@@ -79,8 +79,8 @@
 			},
 			"builtBy": 
 			{
-				"nl": "Door mijzelf met ontwerp-feedback van Sanne Hartmans",
-				"en": "By myself with some feedback about the design by Sanne Hartmans"
+				"nl": "Door mijzelf met ontwerp-feedback en illustraties van Sanne Hartmans",
+				"en": "By myself with some feedback about the design and illustrations by Sanne Hartmans"
 			},
 			"content": [
 				{
