--- a/language/engineer-tech.json
+++ b/language/engineer-tech.json
@@ -3,11 +3,17 @@
 		"nl": "Informatica & Techniek",
 		"en": "Technology & Engineering"
 	},
-	"fields": [
+	"title": {
+		"nl": "Informatica & Techniek",
+		"en": "Technology & Engineering"
+	},
+	"content": [
 		{
-			"name": "lang_pageTitle",
-			"nl": "Informatica & Techniek",
-			"en": "Technology & Engineering"
+			"type": "paragraph",
+			"class": "",
+			"onClick": "",
+			"nl": "Aan deze pagina wordt nog gewerkt, de inhoud komt binnenkort beschikbaar.",
+			"en": "This page is under construction, the content is available soon."
 		}
 	]
 }
