Added styling for common pictures with text wrapping.

--- a/language/photography.json
+++ b/language/photography.json
@@ -178,6 +178,12 @@
 			"en": "My Gear"
 		},
 		{
+			"type": "image",
+			"class": "shared-content-pictureHalfLeftWrap",
+			"onClick": "",
+			"path": "pic_photography/camera.jpg"
+		},
+		{
 			"type": "paragraph",
 			"class": "",
 			"onClick": "",
