Updated the home page introduction text.

--- a/language/home.json
+++ b/language/home.json
@@ -25,8 +25,8 @@
 		},	
 		{
 			"name": "lang_pageDescription",
-			"nl": "Welkom op deze website. Mijn naam is Arthur van Strien en op deze website is een kijk op mijn projecten te vinden.",
-			"en": "Welcome, this website displays my projects and a story about me."
+			"nl": "Welkom op mijn online portfolio. Ook deel ik hier met enthousiasme projecten en kennis.",
+			"en": "Welcome to my online portfolio. I also share projects and knowledge that I find interesting."
 		}
 	]
 }
