Added used materials to the project-list specifications

--- a/language/projectsList.json
+++ b/language/projectsList.json
@@ -72,6 +72,11 @@
 				"nl": "Notepad++, Adobe Lightroom, Gitkraken, Word, Grammarly",
 				"en": "Notepad++, Adobe Lightroom, Gitkraken, Word, Grammarly"
 			},
+			"usedMaterials":
+			{
+				"nl": "N/A",
+				"en": "N/A"
+			},
 			"motive": 
 			{
 				"nl": "Project gebouwd uit eigen beweging",
