Fixed a piece of text missing in the project specifications.

--- a/language/projectsList.json
+++ b/language/projectsList.json
@@ -192,7 +192,7 @@
 			},
 			"versionControl": 
 			{
-				"nl": "<a href='https://github.com/arthurvanstrien/arthurvanstrien-dot-nl' class='shared-content-inlineLinkBlue' target='_blank'>Github</a>",
+				"nl": "Git, te vinden op: <a href='https://github.com/arthurvanstrien/arthurvanstrien-dot-nl' class='shared-content-inlineLinkBlue' target='_blank'>Github</a>",
 				"en": "Git, can be found on: <a href='https://github.com/arthurvanstrien/arthurvanstrien-dot-nl' class='shared-content-inlineLinkBlue' target='_blank'>Github</a>"
 			},
 			"processFramework": 
